--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ button {
   font-family: inherit;
   border: none;
   text-decoration: none;
+  cursor: pointer;
 }
 
 .visually-hidden {
@@ -713,4 +714,172 @@ button {
 .modal-close .cross .icon {
   width: 11px;
   height: 11px;
+}
+
+.modal-close .cross {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover .cross {
+  fill: var(--accent-color);
+}
+
+.form {
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-bottom: 32px;
+  margin-top: 1px;
+}
+
+.form-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--button-color);
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
+.form-field.checkbox {
+  margin-bottom: 30px;
+}
+
+.form-field.textarea {
+  margin-bottom: 20px;
+}
+
+.form-box {
+  position: relative;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+
+  color: var(--primary-text-color);
+}
+
+.form-icon {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  width: 18px;
+  height: 18px;
+  fill: var(--title-color);
+  transform: translateY(-50%);
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus,
+.form-textarea:focus {
+  border: 1px solid var(--accent-color);
+}
+
+.form-input + .form-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus + .form-icon {
+  fill: var(--accent-color);
+}
+
+.form-input {
+  padding: 12px 16px 12px 40px;
+}
+
+.form-textarea {
+  height: 120px;
+  resize: none;
+  padding: 12px 16px 12px 16px;
+}
+
+.form-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form button {
+  display: block;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--hero-title-color);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form button:hover {
+  background-color: #188ce8;
+}
+
+.form .icon {
+  width: 16px;
+  height: 15px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  border: 2px solid var(--button-color);
+
+  border-radius: 2px;
+  background-color: var(--primary-bg-color);
+  fill: transparent;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field.checkbox input:checked + .icon {
+  fill: var(--hero-title-color);
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.form-field.checkbox .form-label {
+  display: flex;
+  align-items: center
+  gap: 9px;
+}
+
+.form .icon svg {
+  width: 16px;
+  height: 15px;
+}
+
+.form-field.checkbox .title {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  color: var(--primary-text-color);
+}
+
+.form-field.checkbox .title a {
+  color: var(--accent-color);
 }
