--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,61 @@ button {
   color: var(--primary-bg-color);
 }
 
+.footer-section .form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+
+  margin-top: 20px;
+}
+
+.footer-section .form button {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  font-weight: 700;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--hero-title-color);
+}
+
+.footer-section .form .icon-send {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-section .form input {
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.footer-section .form input::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-section .form-box {
+  margin-left: auto;
+}
+
 /* portfolio-page */
 /* portfolio-section */
 
@@ -711,7 +766,7 @@ button {
   background: var(--primary-bg-color);
 }
 
-.modal-close .cross .icon {
+.modal-close .cross {
   width: 11px;
   height: 11px;
 }
@@ -724,14 +779,14 @@ button {
   fill: var(--accent-color);
 }
 
-.form {
+.backdrop .form {
   padding-left: 32px;
   padding-right: 32px;
   padding-bottom: 32px;
   margin-top: 1px;
 }
 
-.form-title {
+.backdrop .form-title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -741,23 +796,23 @@ button {
   color: var(--button-color);
 }
 
-.form-field {
+.backdrop .form-field {
   margin-bottom: 10px;
 }
 
-.form-field.checkbox {
+.backdrop .form-field.checkbox {
   margin-bottom: 30px;
 }
 
-.form-field.textarea {
+.backdrop .form-field.textarea {
   margin-bottom: 20px;
 }
 
-.form-box {
+.backdrop .form-box {
   position: relative;
 }
 
-.form-label {
+.backdrop .form-label {
   display: block;
   margin-bottom: 4px;
   font-size: 12px;
@@ -767,7 +822,7 @@ button {
   color: var(--primary-text-color);
 }
 
-.form-icon {
+.backdrop .form-icon {
   display: block;
   position: absolute;
   top: 50%;
@@ -778,8 +833,8 @@ button {
   transform: translateY(-50%);
 }
 
-.form-input,
-.form-textarea {
+.backdrop .form-input,
+.backdrop .form-textarea {
   width: 100%;
   box-sizing: border-box;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -789,37 +844,37 @@ button {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus,
-.form-textarea:focus {
+.backdrop .form-input:focus,
+.backdrop .form-textarea:focus {
   border: 1px solid var(--accent-color);
 }
 
-.form-input + .form-icon {
+.backdrop .form-input + .form-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + .form-icon {
+.backdrop .form-input:focus + .form-icon {
   fill: var(--accent-color);
 }
 
-.form-input {
+.backdrop .form-input {
   padding: 12px 16px 12px 40px;
 }
 
-.form-textarea {
+.backdrop .form-textarea {
   height: 120px;
   resize: none;
   padding: 12px 16px 12px 16px;
 }
 
-.form-textarea::placeholder {
+.backdrop .form-textarea::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form button {
+.backdrop .form button {
   display: block;
   width: 200px;
   height: 50px;
@@ -835,11 +890,11 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form button:hover {
+.backdrop .form button:hover {
   background-color: #188ce8;
 }
 
-.form .icon {
+.backdrop .form .icon {
   width: 16px;
   height: 15px;
   position: relative;
@@ -855,24 +910,24 @@ button {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-field.checkbox input:checked + .icon {
+.backdrop .form-field.checkbox input:checked + label .icon {
   fill: var(--hero-title-color);
   background-color: var(--accent-color);
   border: none;
 }
 
-.form-field.checkbox .form-label {
+.backdrop .form-field.checkbox .form-label {
   display: flex;
-  align-items: center
+  align-items: center;
   gap: 9px;
 }
 
-.form .icon svg {
+.backdrop .form .icon svg {
   width: 16px;
   height: 15px;
 }
 
-.form-field.checkbox .title {
+.backdrop .form-field.checkbox .title {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -880,6 +935,6 @@ button {
   color: var(--primary-text-color);
 }
 
-.form-field.checkbox .title a {
+.backdrop .form-field.checkbox .title a {
   color: var(--accent-color);
 }
